# invoice-to-pay-agent

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  todo.md  turorial.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/: main.py
app/api/: main.py  routes.py
app/graph/: nodes.py  state.py  workflow.py
app/schemas/: audit.py  common.py  delivery_note.py  invoice.py  (+2 more)
docs/: demo-report.md  launch-kit.md  release-v0.1.0.md  repository-launch-checklist.md
pipeline/: output.md
samples/: eval_manifest.jsonl
scripts/: approve_demo.py  reject_demo.py  rename_samples.ps1  review_card.py  run_demo.py
tests/: test_accounting_platforms.py  test_ai_costs.py  test_ai_governance.py  test_ap_schemas.py  test_api.py  test_approval_routing.py  test_audit.py  test_automation_readiness.py  test_business_validation.py  test_compliance.py  test_csv_export.py  test_duplicates.py  test_enterprise_finance_ops.py  test_erp_integration.py  test_erp_mock.py  test_eval_smoke.py  test_exceptions.py  test_extraction.py  test_finance_agents.py  test_gl_coding.py  test_graph.py  test_industry_policy.py  test_kpis.py  test_matching.py  test_mod_ai_ap_agents.py  test_multi_company.py  test_netsuite_ap_readiness.py  test_nodes.py  test_parser_adapters.py  test_parser_contract.py  test_parser_router.py  test_payment_planning.py  test_risk.py  test_run_demo.py  test_schemas.py  test_state_shape.py
(+53 files in other folders)
