[project]
name = "invoice-to-pay-agent"
version = "0.1.0"
description = "Lightweight invoice-to-pay agent prototype with strict schemas and deterministic extraction."
readme = "README.md"
authors = [
    { name = "mshojaei77", email = "shojaeireal@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.10",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
]

[project.scripts]
invoice-to-pay-agent = "app.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
