[project]
name = "invoice-to-pay-agent"
version = "0.1.0"
description = "Lightweight invoice-to-pay agent prototype with strict schemas and deterministic extraction."
readme = "README.md"
authors = [
    { name = "mshojaei77", email = "shojaeireal@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "docling>=2.66.0",
    "fastapi>=0.138.1",
    "langgraph>=1.2.6",
    "liteparse>=2.2.1",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-multipart>=0.0.32",
    "rapidfuzz>=3.14.5",
    "uvicorn>=0.49.0",
]

[project.scripts]
invoice-to-pay-agent = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
